--- a/JJK.html
+++ b/JJK.html
@@ -6,9 +6,13 @@
     <title>JJK</title>
     <style>
         header{
-            background-color: rgb(215, 100, 100);
+            background-color: goldenrod;
             padding: 10px;
             
+        }
+        body{
+            margin: 0;
+             background-color:rgb(242, 233, 233)
         }
         ul{
             list-style-type: none;
@@ -25,10 +29,26 @@
         }
         .logo{
             font-size: 30px;
-            color: rgb(26, 6, 9);
+            color:white;
             float: left;
             margin-left: 10px;
         }
+        img { 
+      width: 30%; 
+      border-radius: 220px; 
+      margin-left: 70%;
+      border-color: black;
+    }
+    h1{
+        text-align: center;
+        color: rgb(82, 77, 235);
+        font-weight: bold;
+         text-shadow: 2px 2px 3px rgb(18, 2, 2); 
+    }
+    h1::first-letter { 
+      font-size: 150%; 
+      color: rgb(125, 21, 217); 
+    }
     </style>
 </head>
 <body>
@@ -41,6 +61,10 @@
             </ul>
     </header>
     <H1>GOJO</H1>
-    <img src="./" alt="Gojo Satoru" width="300" height="400">
+        <section>
+    <img src="./gojo.jpg" alt=""> 
+    <p style="align-items: center;">character profile</p>
+    </section>
+    
 </body>
 </html>
